--- a/src/index.css
+++ b/src/index.css
@@ -139,7 +139,7 @@
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-slate-900 text-foreground;
   }
 }
 /* Webkit (Chrome, Safari, newer versions of Opera) */
@@ -152,7 +152,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #6b7280; /* Gray color (from Tailwind's gray-500) */
+  background-color: transparent; /* Gray color (from Tailwind's gray-500) */
   border-radius: 4px; /* Rounded corners */
 }
 
